kubernetes/apps/hello-world/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: http
    name: http
  type: ClusterIP
